template is done

--- a/index.html
+++ b/index.html
@@ -8,36 +8,60 @@
 </head>
 <body>
     <div class="header">
-        <div class="container-navigation">
+        <div class="container-left">
             <img class="logo" src="images/logo.png" alt="logo">
+            <h1 class="header header-main">This website is  awesome</h1>
+            <p class="header header-secondary ">This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrast</p>
+            <button class="button">Sign up</button>
+        </div>
+        <div class="container-right">
             <ul class="header header-link">
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
+            <div class="header placeholder-image">this is a placeholder for an image</div>
         </div>
-        <div class="container-header">
-            <div class="container-header-left">
-                <h1 class="header header-main">This website is  awesome</h1>
-                <p class="header header-secondary ">This website has some subtext that goes here under the main title. 
-                    It's a smaller font and the color is lower contrast</p>
-                <button class="button">Sign up</button>
-            </div>
-            <div class="container-header-right">
-                <div class="header placeholder-image">this is a placeholder for an image</div>
-            </div>
-        </div>
+    </div>
     <div class="content-one">
-
+        <h2 class="information">Some random information.</h2>
+        <div class="container-images">
+            <div class="images">
+                <div class="image"></div>
+                <div class="subtext-image">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="images">
+                <div class="image"></div>
+                <div class="subtext-image">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="images">
+                <div class="image"></div>
+                <div class="subtext-image">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="images">
+                <div class="image"></div>
+                <div class="subtext-image">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="content-two">
-
+        <p class="quote">This is an inspiring quote,or a testimonial from a
+            customer. Maybe it's just filling up space, or Maybe
+            people will actually read it. Who knows? All I knows?
+            is that it looks nice.
+        </p>
+        <p class="signature">-Thor, God of Thunder</p>
     </div>
     <div class="content-three">
-
+        <div class="left">
+            <div class="text-big">Call to action! It's time!</div>
+            <div class="text-small">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="button bottom">Sign up</button>
     </div>
     <div class="footer">
-
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
